auto complete filter

--- a/angular-metarial/src/app/multi-select-autocomplete/multi-select-autocomplete.component.html
+++ b/angular-metarial/src/app/multi-select-autocomplete/multi-select-autocomplete.component.html
@@ -12,7 +12,7 @@
 	<input matInput placeholder="Arama"
 		   aria-label="State"
 		   [matAutocomplete]="auto"
-		   [formControlName]="formName">
+		   formControlName="autoComplete">
 
 	<button type="button"
 			mat-button
